--- a/puppeteer-example/package.json
+++ b/puppeteer-example/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "imdb-scrapper",
+  "name": "puppeteer-example",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,9 +9,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cheerio": "^1.0.0-rc.3",
-    "json2csv": "^5.0.5",
-    "request": "^2.88.2",
-    "request-promise": "^4.2.6"
+    "puppeteer": "^5.5.0"
   }
 }
